--- a/front-aero/package.json
+++ b/front-aero/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "HTTPS=true react-scripts start"
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
