--- a/front-aero/package.json
+++ b/front-aero/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
     "react-yandex-maps": "^4.6.0",
-    "web-vitals": "^1.1.1",
-    "yup": "^0.32.9"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "serve -s build",
